# Slime_Mold_Simulation

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  id_rsa  id_rsa.pub  pyproject.toml  update.glsl
.github/workflows/: basic_ci.yml
cfg_sim/: world_cfg.py
slime_mold_simulation/: FirstAgent.py  First_tryout_and_Visualizing_of_Agents_And_Pheromones.py  Gui.py  Main.py  Move.py  SlimeConfig.py  SlimeMold_OneAgent.py  Ui_Slider.py  Ui_Slider_logic.py  __init__.py  config.py  gui_old.py  moderngl_example.py  my_module.py  save.py  simulation.py  simulation_old.py  test_moves.py  test_rotate_towards_sensor.py  test_rotatetowardssensor.py  testign.py  unitest.py
tests/: test_my_module.py  test_simulation.py
